<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.ProfileActivity">

    <TextView
        android:id="@+id/text_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="12dp"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/text_edit_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_email"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="12dp"
        android:hint="Telefon"
        android:drawableStart="@drawable/ic_outline_phone_iphone_24_2"
        android:inputType="phone" />


    <Button
        android:id="@+id/button_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/rounded_button_background_2"
        android:textColor="#ffffff"
        android:text="Kaydet" />
</RelativeLayout>